# Primerize_Degenerate

./: .gitignore  README.md  __init__.py  primerize_gui.py  primerize_history.db  pyproject.toml  setup.py  test.py
docs/source/: conf.py
primerize/: misprime.py  primerize_1d.py  primerize_custom.py  thermo.py  util.py  util_class.py  util_func.py
src/: __init__.py
src/primerize_degen/: __init__.py  __main__.py  app.py  primerize_2d.py  primerize_3d.py  util.py  util_server.py  wrapper.py
src/primerize_degenerate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_output/: test_1.txt  test_2.txt
tests/: base.py  test_primerize_1d.py  test_primerize_2d.py  test_primerize_3d.py  test_primerize_custom.py  test_thermo.py  test_util.py  test_wrapper.py
