[project]
name = "primerize-degenerate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy==2.1.3",
    "numba==0.61.0",
    "setuptools>=77.0.3",
    "xlwt>=1.3.0",
    "pyside6>=6.8.2.1",
]

[project.scripts]
primerize_degen = "primerize_degen.app:main"

[tool.uv]
dev-dependencies = [
    "primerize-degenerate",
]

[tool.uv.sources]
primerize-degenerate = { workspace = true }
